...
              Tab(
                key: const ValueKey('import_tab_online'),
                text: context.loc.importTabOnline,
                icon: const Icon(Icons.public),
              ),
              Tab(
                key: const ValueKey('import_tab_scanner'),
                text: context.loc.importTabScanner,
                icon: const Icon(Icons.qr_code_scanner),
              ),
              Tab(
                key: const ValueKey('import_tab_text'),
                text: context.loc.importTabText,
                icon: const Icon(Icons.text_snippet_outlined),
              ),
            ],
          ),
        ),
...
